<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"

    android:fillViewport="true">

    <LinearLayout

        android:id="@+id/content_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"


        android:focusable="true"
        android:focusableInTouchMode="true"

        android:gravity="center"

        android:orientation="vertical"
        android:padding="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="us.theparamountgroup.android.booklistingapp.MainActivity"
        tools:showIn="@layout/activity_main">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_weight="0"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/book_logo_desc"
                android:gravity="center"
                android:padding="10dp"
                app:srcCompat="@drawable/bobs_books_logo" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/bob_s_books"
                android:textAlignment="center"
                android:textAppearance="?android:textAppearanceLarge"
                android:textColor="#8CC63F"
                android:textSize="35sp"
                android:textStyle="bold"
                android:typeface="sans" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingTop="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"

                android:paddingTop="10dp">

                <TextView
                    android:id="@+id/subject"
                    android:layout_width="100sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:text="@string/subject"
                    android:textAllCaps="true"
                    android:textAppearance="?android:textAppearanceLarge" />

                <EditText
                    android:id="@+id/edit_subject"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/fill_blocks"
                    android:textColorHint="#FFF"
                    android:textColor="#FFF"
                    android:backgroundTint="@color/colorAccent"
                    android:hint="@string/enter_subject"
                    android:padding="5dp"
                    android:textAlignment="center"
                    android:textAppearance="?android:textAppearanceMedium" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"

                android:paddingTop="20dp">

                <TextView
                    android:id="@+id/author"
                    android:layout_width="100sp"
                    android:layout_height="wrap_content"

                    android:text="Author:"
                    android:textAllCaps="true"
                    android:textAppearance="?android:textAppearanceLarge" />

                <EditText
                    android:id="@+id/edit_author"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="#FFF"
                    android:textColor="#FFF"
                    android:background="@drawable/fill_blocks"
                    android:backgroundTint="@color/colorAccent"
                    android:hint="Enter Author"
                    android:padding="5dp"
                    android:textAlignment="center"
                    android:textAppearance="?android:textAppearanceMedium" />

            </LinearLayout>

            <VideoView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/videoView" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"

                android:paddingTop="20dp">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="100sp"
                    android:layout_height="wrap_content"

                    android:text="Title:"
                    android:textAllCaps="true"
                    android:textAppearance="?android:textAppearanceLarge" />

                <EditText
                    android:id="@+id/edit_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/fill_blocks"
                    android:backgroundTint="@color/colorAccent"
                    android:hint="@string/enter_title_hint"
                    android:textColorHint="#FFF"
                    android:padding="5dp"
                    android:textColor="#FFF"
                    android:textAlignment="center"
                    android:textAppearance="?android:textAppearanceMedium" />

            </LinearLayout>

            <Button
                android:id="@+id/search_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:layout_marginBottom="5dp"
                android:backgroundTint="#8CC63F"
                android:paddingBottom="15dp"
                android:text="@string/search_books"
                android:textColor="#FFF"
                android:textSize="28sp" />
            <ImageView
                android:id="@+id/poweredByGoogle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/google_logo_desc"
                android:gravity="center"
                android:padding="5dp"
                app:srcCompat="@drawable/powered_by_google_on_white" />
        </LinearLayout>


    </LinearLayout>

</ScrollView>